--- a/Weitianshi/pages/message/contactProject/projectList/projectList.wxml
+++ b/Weitianshi/pages/message/contactProject/projectList/projectList.wxml
@@ -9,17 +9,22 @@
       </view>
       <view class="t-allIndustry" style="text-align:left">
         <block wx:for="{{projectMessage.pro_industry}}" wx:key="{{index}}" wx:for-item='industry'>
-          <label class="{{industry.is_match == 1 ? 't-hightLight':'noLight'}}" wx:if="{{index < item.pro_industry.length-1}}">{{industry.industry_name}}、</label>
-          <label class="{{industry.is_match == 1 ? 't-hightLight':'noLight'}}" wx:if="{{index == item.pro_industry.length-1}}">{{industry.industry_name}}</label>
+          <label class="t-noLight" wx:if="{{index < projectMessage.pro_industry.length-1}}">{{industry.industry_name}}、</label>
+          <label class="t-noLight" wx:if="{{index == projectMessage.pro_industry.length-1}}">{{industry.industry_name}}</label>
         </block>
       </view>
-      <view class="t-allProjectDetail flex" wx:if="{{projectMessage.pro_area != ''||projectMessage.pro_finance_stock_after!=0||projectMessage.pro_stage!=''||projectMessage.pro_scale!=''}}">
-        <view class="{{projectMessage.pro_scale.is_match == 1 ? 't-projectDetailLight' : 't-projectDetailLine'}}" wx:if="{{projectMessage.pro_scale != ''}}">{{projectMessage.pro_scale.scale_money}}</view>
-        <view class="{{projectMessage.pro_finance_stock_after.is_match == 1 ? 't-projectDetailLight' : 't-projectDetailLine'}}" wx:if="{{projectMessage.pro_finance_stock_after != ''}}">{{projectMessage.pro_finance_stock_after}}%</view>
-        <view class="{{projectMessage.pro_stage.is_match == 1 ? 't-projectDetailLight' : 't-projectDetailLine'}}" wx:if="{{projectMessage.pro_stage != ''}}">{{projectMessage.pro_stage.stage_name}}</view>
-        <view class="{{projectMessage.pro_area.is_match == 1 ? 't-projectDetailLight' : 't-projectDetailLine'}}" wx:if="{{item.pro_area != ''}}">{{projectMessage.pro_area.area_title}}</view>
+      <view class="allProjectDetail flex" wx:if="{{projectMessage.pro_area != ''||projectMessage.pro_finance_stock_after!=0||projectMessage.pro_stage!=''||projectMessage.pro_scale!=''}}">
+        <view  class="t-projectDetailLine" wx:if="{{projectMessage.pro_scale != ''}}">{{projectMessage.pro_scale.scale_money}}</view>
+        <view  class="t-projectDetailLine" wx:if="{{projectMessage.pro_finance_stock_after != ''}}">{{projectMessage.pro_finance_stock_after}}%</view>
+        <view class="t-projectDetailLine" wx:if="{{projectMessage.pro_stage != ''}}">{{projectMessage.pro_stage.stage_name}}</view>
+        <view class= 't-projectDetailLine'>{{projectMessage.pro_area.area_title}}</view>
       </view>
     </view>
-    <view class="t-time">{{item.created_at}}</view>
   </view>
 </view>
+
+<view class="outSideBox">
+      <template is="allNumber" data="{{count:count,text:'约谈您的项目'}}"></template>
+</view>
+
+<template is="hasNothing"></template>
