--- a/Weitianshi/pages/message/contactProject/projectList/projectList.wxss
+++ b/Weitianshi/pages/message/contactProject/projectList/projectList.wxss
@@ -1,1 +1,47 @@
 /* pages/message/contactProject/projectList/projectList.wxss */
+
+.allProjectDetail {
+  font-size: 26rpx;
+ color:#666666;
+  line-height: 26rpx;
+  text-align: left;
+}
+.t-noLight {
+  color: #666666;
+}
+.browseMeTitle {
+  /*height: 90rpx;*/
+  margin: 32rpx 32rpx 32rpx 32rpx;
+}
+.t-outBox .t-describle {
+  color:#333333;
+    font-size: 32rpx;
+  line-height: 36rpx;
+  text-align: left;
+  margin-bottom: 34rpx;
+}
+
+.browseMeTitle .num {
+  font-size: 24rpx;
+  color: #666;
+  line-height: 24rpx;
+  text-align: right;
+}
+
+.title {
+  font-size: 26rpx;
+  color: #333;
+  line-height: 26rpx;
+  text-align: left;
+}
+
+.title .block {
+  background: #40587a;
+  width: 4rpx;
+  height: 24rpx;
+  margin-right: 12rpx;
+}
+
+.outSideBox {
+  background: #fff;
+}
