--- a/Weitianshi/pages/message/contactProject/projectList/projectList.wxml
+++ b/Weitianshi/pages/message/contactProject/projectList/projectList.wxml
@@ -41,7 +41,7 @@
             <image src="{{item.investor_logo_url}}" class="t-userPic" wx:if="{{item.investor_logo_url}}"></image>
           </view>
           <view class="t-userCompany">{{item.investor_company}}</view>
-          <view class="t-record">{{item.active_status}}</view>
+          <view class="t-record">{{item.active}}</view>
           <view class="t-roundGroupPush flex" wx:if="{{item.resource.res_give != ''}}">
             <view class="t-roundGroupTitle">提供资源：</view>
             <view class="t-roundGroupContent">
