--- a/Weitianshi/pages/myProject/editProject/editProject.wxml
+++ b/Weitianshi/pages/myProject/editProject/editProject.wxml
@@ -2,6 +2,14 @@
 <template is="pointPC">去电脑上创建项目更方便</template>
 <view id="myProject">
   <view class="card">
+    <view class="text">项目名称</view>
+    <input placeholder="仅自己可见" placeholder-style='color:#ccc' class="newBox" bindinput="projectName" maxlength="40" value="{{projectName}}" />
+  </view>
+  <view class="card">
+    <view class="text">公司名称</view>
+    <input placeholder="仅自己可见" placeholder-style='color:#ccc' class="newBox" bindinput="companyName" maxlength="40" value="{{companyName}}" />
+  </view>
+  <view class="card">
     <view class="text">项目介绍*</view>
     <textarea placeholder="一句话介绍,30字以内." placeholder-style='color:#ccc' bindblur="bindTextAreaBlur" maxlength="40" value="{{describe}}" />
   </view>
@@ -96,54 +104,73 @@
     <view class="weui-loadmore__tips">正在加载</view>
   </view>
 </view>
-  <view class="topBox">
-    <view class="userBox">
-      <view class="projectBoxContent flex">
-        <view class="projectTitle">商业计划书</view>
-        <view class="flex">
-          <view class="projectContent">去电脑上传</view>
-          <!-- <view class="personListContentAfter"></view> -->
-        </view>
-      </view>
-    </view>
-    <view class="userBox">
-      <view class="projectBoxContent flex">
-        <view class="projectTitle">投后股份（%）</view>
-        <view class="flex">
-          <view class="projectContent">请输入投后股权占比</view>
-          <!-- <view class="personListContentAfter"></view> -->
-        </view>
-      </view>
-    </view>
-    <view class="userBox">
-      <view class="projectBoxContent flex noBorder">
-        <view class="projectTitle">私密性设置</view>
-        <view class="flex">
-          <view class="projectContent">私密项目（仅个人/团队可见）</view>
-          <!-- <view class="personListContentAfter"></view> -->
-        </view>
+<view class="topBox">
+  <view class="userBox">
+    <view class="projectBoxContent flex" bindtap="toPc">
+      <view class="projectTitle">商业计划书</view>
+      <view class="flex">
+        <view class="projectContent">去电脑上传</view>
+        <image src="/img/icon-jiantou3@2x.png" class="arrowStyle"></image>
+        <!-- <view class="personListContentAfter"></view> -->
       </view>
     </view>
   </view>
-  <view class="tipsNew flex">
-    <image src="/img/icon-zhuyi@2x.png" class="tipsPic"></image>
-    <view class="tipsContent">未经您的许可，项目数据绝对私密安全</view>
-  </view>
-  <view class="choiceBox flex">
-    <view class="content">需要Bp美化</view>
-    <switch checked bindchange="switch1Change" class="switchTab" />
-  </view>
-    <view class="choiceBox flex">
-    <view class="content">需要融资股份（FA）服务</view>
-    <switch checked bindchange="switch1Change" class="switchTab" />
-  </view>
-  <view class="question">
-    <view class="questionWhy">Q：什么是融资顾问服务</view>
-    <view class="answer">A：微天使平台会结合您的融资需求推荐最适合的FA，帮助您打磨 商业计划，梳理BP，引荐投资机构。（业务同学会通过您在平台 留下的联系方式与您沟通具体融资需求）
+  <view class="userBox">
+    <view class="projectBoxContent flex">
+      <view class="projectTitle">投后股份（%）</view>
+      <view class="flex">
+        <view class="projectContent">请输入投后股权占比</view>
+        <image src="/img/icon-jiantou3@2x.png" class="arrowStyle"></image>
+        <!-- <view class="personListContentAfter"></view> -->
+      </view>
     </view>
   </view>
-    <!-- <button class="nextBtn" bindtap="public">
+  <view class="userBox">
+    <view class="projectBoxContent flex noBorder"  bindtap="initPrivacy">
+      <view class="projectTitle">私密性设置</view>
+      <view class="flex">
+        <view class="projectContent">请选择</view>
+        <image src="/img/icon-jiantou3@2x.png" class="arrowStyle"></image>
+        <!-- <view class="personListContentAfter"></view> -->
+      </view>
+    </view>
+  </view>
+</view>
+<view class="tipsNew flex">
+  <image src="/img/icon-zhuyi@2x.png" class="tipsPic"></image>
+  <view class="tipsContent">未经您的许可，项目数据绝对私密安全</view>
+</view>
+<view class="choiceBox flex">
+  <view class="content">需要Bp美化</view>
+  <switch checked bindchange="switch1Change" class="switchTab" />
+</view>
+<view class="choiceBox flex">
+  <view class="content">需要融资股份（FA）服务</view>
+  <switch checked bindchange="switch1Change" class="switchTab" />
+</view>
+<view class="choiceBox flex">
+  <view class="content">是否需要云投行服务</view>
+  <switch checked bindchange="switchChange3" class="switchTab" />
+</view>
+<view class="question">
+  <view class="questionWhy">Q：什么是融资顾问服务</view>
+  <view class="answer">A：微天使平台会结合您的融资需求推荐最适合的FA，帮助您打磨 商业计划，梳理BP，引荐投资机构。（业务同学会通过您在平台 留下的联系方式与您沟通具体融资需求）
+  </view>
+</view>
+<!-- <button class="nextBtn" bindtap="public">
     维护项目
   </button> -->
-  <view class="highBox"></view>
+<view class="highBox"></view>
 <template is="buttonOne" data="{{text:'维护项目',btnName:'public'}}"></template>
+
+<view class="modalBox" hidden="{{modalBox==0}}">
+  <view class="classname" bindtap="closeModal">
+    <image src="/img/icon-guanbi@2x.png" class="close"></image>
+  </view>
+  <view class="contactModalBox">
+    <image src="/img/img-saoyisao@2x.png" class="aPic"></image>
+   <view class="modalTitle">电脑打开,点击扫一扫</view>
+    <view class="modalTips">www.weitianshi.cn/qr</view>
+    <view class="btn" bindtap="yesBtn">扫一扫</view>
+  </view>
+</view>
