--- a/Weitianshi/pages/myProject/publishProject/publishProject.wxss
+++ b/Weitianshi/pages/myProject/publishProject/publishProject.wxss
@@ -32,6 +32,7 @@ page {
   height: 66rpx;
   font-size: 28rpx;
   margin-bottom: 16rpx;
+  width: 590rpx;
 }
 
 .text {
@@ -234,4 +235,81 @@ page {
 }
 .noBorder{
   border:none;
+}
+.card .newBox{
+  height:82rpx;
+ padding:0 32rpx;
+ line-height: 160rpx; 
+}
+/*模态框  */
+.modalBox {
+  background: rgba(0, 0, 0, 0.5);
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  left: 0;
+  top: 0;
+   z-index:9999999;
+   overflow: hidden;
+}
+.contactModalBox {
+  height: 652rpx;
+  width: 506rpx;
+  background-color: white;
+  margin-top: 206rpx;
+  margin-left: 64rpx;
+  padding: 40rpx 32rpx 32rpx 32rpx;
+  position: relative;
+  z-index:99999999;
+}
+.modalTitle{
+font-size:32rpx;
+color:#333333;
+line-height:32rpx;
+text-align:center;
+margin-bottom:16rpx;
+}
+.modalContent{
+border:1rpx solid #e6e6e6;
+/* width:504rpx; */
+height:258rpx;
+margin-bottom:48rpx;
+margin-right: 0;
+outline: none;
+padding-top:20rpx;
+padding-left:24rpx;
+font-size:28rpx;
+color:#999999;
+line-height:28rpx;
+}
+.modalTips{
+font-size:28rpx;
+color:#666666;
+line-height:40rpx;
+text-align:center;
+padding:0 28rpx;
+}
+.btn{
+background:#40587a;
+border-radius:6rpx;
+width:506rpx;
+height:88rpx;
+font-size:32rpx;
+color:#ffffff;
+line-height:88rpx;
+text-align:center;
+margin-top: 72rpx;
+}
+.close{
+  width:48rpx;
+  height:48rpx;
+  position: absolute;
+  top:185rpx;
+  right:94rpx;
+    z-index:999999999;
+}
+.aPic{
+  height:250rpx;
+  width:276rpx;
+  margin: 96rpx 0 62rpx 118rpx;
 }
