--- a/Weitianshi/pages/Template/Template.wxml
+++ b/Weitianshi/pages/Template/Template.wxml
@@ -437,11 +437,6 @@
   </view>
 </template>
 
-<!--全网人脉卡片-->
-<template name="networkCard">
-
-</template>
-
 <!--多选标签模块-->
 <template name="tags">
   <block wx:for="{{tagsData}}" wx:key="{{item.industry_id||item.stage_id||item.scale_id||item.area_id}}">
@@ -629,7 +624,7 @@
         </view>
         <view class="t-userCompany">{{item.user_company}}</view>
         <view class="t-record">{{item.active_status}}</view>
-       <view class="t-roundGroupPush flex" wx:if="{{item.resource.res_give != ''}}">
+        <view class="t-roundGroupPush flex" wx:if="{{item.resource.res_give != ''}}">
           <view class="t-roundGroupTitle">提供资源：</view>
           <view class="t-roundGroupContent">
             <block wx:for="{{item.resource.res_give}}" wx:key="{{item.resource.res_give.index}}" wx:for-item='userGive'>
@@ -645,18 +640,17 @@
         <view class="t-roundGroupPush flex" wx:if="{{item.resource.res_find != ''}}">
           <view class="t-roundGroupTitle">寻求资源：</view>
           <view class="t-roundGroupContent">
-            <block  wx:for="{{item.resource.res_find}}" wx:key="{{item.resource.res_find.index}}" wx:for-item ='userFind'>
-              <label class="{{userFind.is_match == 1 ? 't-hightLight':'t-noLight'}}" wx:if="{{index < item.resource.res_find.length-1}}">{{userFind.resource_name}}、</label>  
-              <label class="{{userFind.is_match == 1 ? 't-hightLight':'t-noLight'}}" wx:if="{{index ==item.resource.res_find.length-1}}">{{userFind.resource_name}}</label>  
+            <block wx:for="{{item.resource.res_find}}" wx:key="{{item.resource.res_find.index}}" wx:for-item='userFind'>
+              <label class="{{userFind.is_match == 1 ? 't-hightLight':'t-noLight'}}" wx:if="{{index < item.resource.res_find.length-1}}">{{userFind.resource_name}}、</label>
+              <label class="{{userFind.is_match == 1 ? 't-hightLight':'t-noLight'}}" wx:if="{{index ==item.resource.res_find.length-1}}">{{userFind.resource_name}}</label>
             </block>
           </view>
         </view>
-      <view>
-        <view class="t-describe" wx:if="{{item.resource.res_desc != null}}">{{item.resource.res_desc}}</view>
-      </view>
+        <view>
+          <view class="t-describe" wx:if="{{item.resource.res_desc != null}}">{{item.resource.res_desc}}</view>
+        </view>
       </view>
     </view>
-    <template is='cardBottom1'></template>
   </block>
 </template>
 
@@ -950,6 +944,51 @@
       <view class='btnGroup flex' wx:if="{{SearchInit.currentIndex!=5}}">
         <button bindtap='reset'>重置</button>
         <button bindtap='searchCertain'>确定</button>
+      </view>
+    </view>
+  </view>
+</template>
+
+<!--投资人卡片  -->
+<template name="InvestorCard">
+  <view class="t-outsideBox" data-id="{{item.user_id}}" catchtap="personDetail">
+    <view class="t-applyMyProject t-contacts-detailm">
+      <view class="t-introduceBox flex">
+        <view class="t-userName">{{item.user_name}}</view>
+        <view class="t-userPosition">{{item.user_career}}</view>
+        <view class="t-userPart flex" wx:if="{{user.authentication[0].group_title}}">
+          <image src="/img/icon-renzheng@2x.png" class="renzheng"></image>
+          <view class="t-userPart1">{{user.authentication[0].group_title}}</view>
+        </view>
+        <view class="t-user_text" wx:if="{{item.user_avatar_text}}">{{item.user_avatar_text}}</view>
+        <image src="{{item.user_avatar_url}}" class="t-userPic" wx:if="{{item.user_avatar_url}}"></image>
+      </view>
+      <view class="t-userCompany">{{item.user_company}}</view>
+      <view class="t-record">{{item.active_status}}</view>
+      <view class="t-roundGroupPush flex" wx:if="{{item.resource.res_give != ''}}">
+        <view class="t-roundGroupTitle">提供资源：</view>
+        <view class="t-roundGroupContent">
+          <block wx:for="{{item.resource.res_give}}" wx:key="{{item.resource.res_give.index}}" wx:for-item='userGive'>
+            <label class="{{userGive.is_match == 1 ? 't-hightLight':'t-noLight'}}" wx:if="{{index < item.resource.res_give.length-1}}">
+              {{userGive.resource_name}}、
+            </label>
+            <label class="{{userGive.is_match == 1 ? 't-hightLight':'t-noLight'}}" wx:if="{{index ==  item.resource.res_give.length-1}}">
+              {{userGive.resource_name}}
+            </label>
+          </block>
+        </view>
+      </view>
+      <view class="t-roundGroupPush flex" wx:if="{{item.resource.res_find != ''}}">
+        <view class="t-roundGroupTitle">寻求资源：</view>
+        <view class="t-roundGroupContent">
+          <block wx:for="{{item.resource.res_find}}" wx:key="{{item.resource.res_find.index}}" wx:for-item='userFind'>
+            <label class="{{userFind.is_match == 1 ? 't-hightLight':'t-noLight'}}" wx:if="{{index < item.resource.res_find.length-1}}">{{userFind.resource_name}}、</label>
+            <label class="{{userFind.is_match == 1 ? 't-hightLight':'t-noLight'}}" wx:if="{{index ==item.resource.res_find.length-1}}">{{userFind.resource_name}}</label>
+          </block>
+        </view>
+      </view>
+      <view>
+        <view class="t-describe" wx:if="{{item.resource.res_desc != null}}">{{item.resource.res_desc}}</view>
       </view>
     </view>
   </view>
