--- a/Weitianshi/pages/discoverProject/discoverProject.wxml
+++ b/Weitianshi/pages/discoverProject/discoverProject.wxml
@@ -6,7 +6,7 @@
 <!--筛选和搜索  -->
 <template is='search' data='{{SearchInit}}'></template>
 <!--项目展示列表  -->
-<swiper current="{{currentTab}}" class="swiper-box" duration="300" style="height:945rpx" bindchange="bindChange">
+<swiper current="{{currentTab}}" class="swiper-box" duration="300" style="height:865rpx" bindchange="bindChange">
   <!--精选  -->
   <swiper-item data-current='0'>
     <!--banner轮播  -->
@@ -40,5 +40,7 @@
     <view class='t-modal' wx:if='{{SearchInit.currentIndex!=5}}' bindtap='modal'></view>
   </swiper-item>
 </swiper>
-<!--错误提示-->
+<!--创建项目引导  -->
+<template is='createProject'></template>
+<!--错误提示  -->
 <view class="error" wx:if="{{error=='1'}}">{{error_text}}</view>
