--- a/Weitianshi/pages/myProject/editProject/editProject.wxml
+++ b/Weitianshi/pages/myProject/editProject/editProject.wxml
@@ -3,11 +3,11 @@
 <view id="myProject">
   <view class="card">
     <view class="text">项目名称</view>
-    <input placeholder="仅自己可见" placeholder-style='color:#ccc' class="newBox" bindinput="projectName" maxlength="40" value="{{projectName}}" />
+    <input placeholder="仅自己可见" placeholder-style='color:#ccc' class="newBox" bindinput="projectName" maxlength="40" value="{{pro_name}}" />
   </view>
   <view class="card">
     <view class="text">公司名称</view>
-    <input placeholder="仅自己可见" placeholder-style='color:#ccc' class="newBox" bindinput="companyName" maxlength="40" value="{{companyName}}" />
+    <input placeholder="仅自己可见" placeholder-style='color:#ccc' class="newBox" bindinput="companyName" maxlength="40" value="{{pro_company_name}}" />
   </view>
   <view class="card">
     <view class="text">项目介绍*</view>
@@ -55,45 +55,14 @@
   <view class="card">
     <view class="text">项目亮点*</view>
     <view id="greatPoint" class="slect flex" style="padding:0;">
-      <input class="slectInput" placeholder="请输入项目亮点" placeholder-style='color:#ccc' value="{{pro_goodness}}" bindblur="slectInput" maxlength="500" />
+      <input class="slectInput" placeholder="请输入项目亮点" placeholder-style='color:#ccc' value="{{pro_goodness}}" bindblur="slectInput" maxlength="1000" />
     </view>
   </view>
-
-  <!--非必填-->
-  <!--<view class="notNecessary">
-    <view class="card">
-      <view class="text">项目名称</view>
-      <view id="projectName" class="slect flex">
-        <input class="slectInput" placeholder="项目名称不对外公开" />
-      </view>
-    </view>
-
-    <view class="card">
-      <view class="text">公司名称</view>
-      <view id="companyName" class="slect flex">
-        <input class="slectInput" placeholder="公司名称不对外公开" />
-      </view>
-    </view>
-
-
-
-    <view class="card">
-      <view class="text">投后股份(%)</view>
-      <view id="stock" class="slect flex">
-        <input class="slectInput" placeholder="投后股权占比" />
-      </view>
-    </view>
-  </view>-->
-
 
   <view class="bp flex">
     <view>项目计划书</view>
     <view class="bpBtn" bindtap="upLoad">去PC上传</view>
   </view>
-  <!--<view class="grey">
-    BP私密保护,投资人可通过申请查看来了解项目价值
-  </view>-->
-
 
   <!--错语提示-->
   <view class="error" wx:if="{{error=='1'}}">{{error_text}}</view>
@@ -119,14 +88,15 @@
     <view class="projectBoxContent flex">
       <view class="projectTitle">投后股份（%）</view>
       <view class="flex">
-        <view class="projectContent">请输入投后股权占比</view>
-        <image src="/img/icon-jiantou3@2x.png" class="arrowStyle"></image>
-        <!-- <view class="personListContentAfter"></view> -->
+        <input class="projectContentInput newBox" placeholder="请输入投后股权占比" placeholder-style="color:#ccc" bindinput="projectFinance" value="{{pro_finance_stock_after}}"/>
+        <view class="flex">
+          <image src="/img/icon-jiantou3@2x.png" class="arrowStyle"></image>
+        </view>
       </view>
     </view>
   </view>
   <view class="userBox">
-    <view class="projectBoxContent flex noBorder"  bindtap="initPrivacy">
+    <view class="projectBoxContent flex noBorder" bindtap="initPrivacy">
       <view class="projectTitle">私密性设置</view>
       <view class="flex">
         <view class="projectContent">请选择</view>
@@ -140,15 +110,15 @@
   <image src="/img/icon-zhuyi@2x.png" class="tipsPic"></image>
   <view class="tipsContent">未经您的许可，项目数据绝对私密安全</view>
 </view>
-<view class="choiceBox flex">
+<view class="choiceBox flex" wx:if="{{group_id != 21&& group_id != 18 && group_id != 6}}">
   <view class="content">需要Bp美化</view>
   <switch checked bindchange="switch1Change" class="switchTab" />
 </view>
-<view class="choiceBox flex">
+<view class="choiceBox flex" wx:if="{{group_id != 21&& group_id != 18 && group_id != 6}}">
   <view class="content">需要融资股份（FA）服务</view>
   <switch checked bindchange="switch1Change" class="switchTab" />
 </view>
-<view class="choiceBox flex">
+<view class="choiceBox flex" wx:if="{{group_id == 21|| group_id == 18 || group_id == 6}}">
   <view class="content">是否需要云投行服务</view>
   <switch checked bindchange="switchChange3" class="switchTab" />
 </view>
@@ -169,7 +139,7 @@
   </view>
   <view class="contactModalBox">
     <image src="/img/img-saoyisao@2x.png" class="aPic"></image>
-   <view class="modalTitle">电脑打开,点击扫一扫</view>
+    <view class="modalTitle">电脑打开,点击扫一扫</view>
     <view class="modalTips">www.weitianshi.cn/qr</view>
     <view class="btn" bindtap="yesBtn">扫一扫</view>
   </view>
