--- a/Weitianshi/pages/myProject/publishProject/publishProject.wxml
+++ b/Weitianshi/pages/myProject/publishProject/publishProject.wxml
@@ -102,7 +102,7 @@
     <view class="projectBoxContent flex">
       <view class="projectTitle">投后股份（%）</view>
       <view class="flex">
-        <view class="projectContent">请输入投后股权占比</view>
+          <input class="projectContentInput newBox" placeholder="请输入投后股权占比" placeholder-style="color:#ccc"  bindinput="projectFinance"/>
         <image src="/img/icon-jiantou3@2x.png" class="arrowStyle"></image>
         <!-- <view class="personListContentAfter"></view> -->
       </view>
@@ -123,15 +123,15 @@
   <image src="/img/icon-zhuyi@2x.png" class="tipsPic"></image>
   <view class="tipsContent">未经您的许可，项目数据绝对私密安全</view>
 </view>
-<view class="choiceBox flex">
+<view class="choiceBox flex" wx:if="{{group_id != 21&& group_id != 18 && group_id != 6}}">
   <view class="content">需要Bp美化</view>
   <switch checked bindchange="switchChange1" class="switchTab" />
 </view>
-<view class="choiceBox flex">
+<view class="choiceBox flex" wx:if="{{group_id != 21&& group_id != 18 && group_id != 6}}">
   <view class="content">需要融资股份（FA）服务</view>
   <switch checked bindchange="switchChange2" class="switchTab" />
 </view>
-<view class="choiceBox flex">
+<view class="choiceBox flex" wx:if="{{group_id == 21|| group_id == 18 || group_id == 6}}">
   <view class="content">是否需要云投行服务</view>
   <switch checked bindchange="switchChange3" class="switchTab" />
 </view>
